--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -64,7 +64,7 @@ ctests = simple gc set_pkcs12_cred certder certuniqueid mpi		\
 	init_roundtrip pkcs12_s2k_pem dn2 mini-eagain			\
 	nul-in-x509-names x509_altname pkcs12_encode mini-x509		\
 	mini-x509-rehandshake rng-fork mini-eagain-dtls cipher-test	\
-	x509cert x509cert-tl #gendh
+	x509cert x509cert-tl infoaccess #gendh
 
 if ENABLE_OPENSSL
 ctests +=  openssl
