backported valgrind updates.

--- a/.gitignore
+++ b/.gitignore
@@ -490,3 +490,72 @@ tests/x509paths/
 tests/x509self
 tests/x509sign-verify
 tests/x509signself
+doc/examples/ex-cert-select-pkcs11
+.dirstamp
+gl/signal.h
+gl/tests/inttypes.h
+gl/tests/test-accept
+gl/tests/test-bind
+gl/tests/test-close
+gl/tests/test-connect
+gl/tests/test-dup2
+gl/tests/test-fcntl-h
+gl/tests/test-fdopen
+gl/tests/test-fgetc
+gl/tests/test-float
+gl/tests/test-fputc
+gl/tests/test-fread
+gl/tests/test-fseek
+gl/tests/test-fseeko3
+gl/tests/test-fseeko4
+gl/tests/test-fstat
+gl/tests/test-ftell
+gl/tests/test-ftell3
+gl/tests/test-ftello4
+gl/tests/test-ftruncate
+gl/tests/test-fwrite
+gl/tests/test-getcwd-lgpl
+gl/tests/test-ignore-value
+gl/tests/test-intprops
+gl/tests/test-inttypes
+gl/tests/test-ioctl
+gl/tests/test-listen
+gl/tests/test-lock
+gl/tests/test-lstat
+gl/tests/test-open
+gl/tests/test-pathmax
+gl/tests/test-perror2
+gl/tests/test-pipe
+gl/tests/test-recv
+gl/tests/test-send
+gl/tests/test-setsockopt
+gl/tests/test-shutdown
+gl/tests/test-signal-h
+gl/tests/test-stat
+gl/tests/test-strerror_r
+gl/tests/test-symlink
+gl/tests/test-sys_types
+gl/tests/test-sys_uio
+gl/tests/test-thread_create
+gl/tests/test-thread_self
+lib/gl/tests/inttypes.h
+lib/gl/tests/test-fcntl-h
+lib/gl/tests/test-fdopen
+lib/gl/tests/test-fgetc
+lib/gl/tests/test-float
+lib/gl/tests/test-fputc
+lib/gl/tests/test-fread
+lib/gl/tests/test-fseek
+lib/gl/tests/test-fseeko3
+lib/gl/tests/test-fseeko4
+lib/gl/tests/test-fstat
+lib/gl/tests/test-ftell
+lib/gl/tests/test-ftell3
+lib/gl/tests/test-ftello4
+lib/gl/tests/test-fwrite
+lib/gl/tests/test-intprops
+lib/gl/tests/test-inttypes
+lib/gl/tests/test-sys_types
+lib/gl/tests/test-sys_uio
+tests/rng-fork
+tests/x509cert
