--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@ ABOUT-NLS
 INSTALL
 Makefile
 Makefile.in
+TAGS
 aclocal.m4
 autom4te.cache/
+build-aux/compile
 build-aux/config.guess
 build-aux/config.sub
 build-aux/depcomp
@@ -36,16 +38,23 @@ doc/credentials/x509/Makefile
 doc/credentials/x509/Makefile.in
 doc/cyclo/Makefile
 doc/cyclo/Makefile.in
+doc/cyclo/cyclo-gnutls.html
 doc/doxygen/Doxyfile
+doc/doxygen/html/
+doc/doxygen/latex/
+doc/enums.texi
+doc/enums/
 doc/errcodes
 doc/error_codes.texi
 doc/examples/Makefile
 doc/examples/Makefile.in
 doc/examples/ex-cert-select
+doc/examples/ex-cert-select-pkcs11
 doc/examples/ex-client-psk
 doc/examples/ex-client-resume
 doc/examples/ex-client-srp
 doc/examples/ex-client-tlsia
+doc/examples/ex-client-udp
 doc/examples/ex-client1
 doc/examples/ex-client2
 doc/examples/ex-crq
@@ -62,6 +71,7 @@ doc/extra-api.texi
 doc/extra.c.texi
 doc/gnutls-api.texi
 doc/gnutls-extra-api.texi
+doc/gnutls-guile.html
 doc/gnutls.aux
 doc/gnutls.cp
 doc/gnutls.cps
@@ -83,6 +93,10 @@ doc/gnutls.tp
 doc/gnutls.vr
 doc/gnutls.vrs
 doc/ia-api.texi
+doc/latex/enums
+doc/latex/gnutls-enums.tex
+doc/latex/gnutls.lof
+doc/latex/gnutls.lot
 doc/manpages/*.3
 doc/manpages/Makefile
 doc/manpages/Makefile.in
@@ -117,7 +131,9 @@ doc/reference/tmpl/
 doc/reference/xml/
 doc/scripts/Makefile
 doc/scripts/Makefile.in
+doc/stamp-1
 doc/stamp-vti
+doc/version-guile.texi
 doc/version.texi
 doc/x509-api.texi
 gl/Makefile
@@ -126,7 +142,10 @@ gl/alloca.h
 gl/arg-nonnull.h
 gl/arpa/
 gl/c++defs.h
+gl/dirent.h
+gl/getopt.h
 gl/libgnu.la
+gl/math.h
 gl/netdb.h
 gl/stdio.h
 gl/stdlib.h
@@ -138,96 +157,124 @@ gl/tests/Makefile.in
 gl/tests/arg-nonnull.h
 gl/tests/c++defs.h
 gl/tests/fcntl.h
+gl/tests/inttypes.h
+gl/tests/inttypes.h 
 gl/tests/libtests.a
 gl/tests/sys/
 gl/tests/test-alignof
 gl/tests/test-alloca-opt
+gl/tests/test-argp
 gl/tests/test-arpa_inet
 gl/tests/test-binary-io
+gl/tests/test-byteswap
 gl/tests/test-c-ctype
+gl/tests/test-close
+gl/tests/test-dirent
+gl/tests/test-dup2
+gl/tests/test-environ
 gl/tests/test-errno
+gl/tests/test-fcntl-h
+gl/tests/test-fdopen
+gl/tests/test-fgetc
+gl/tests/test-float
+gl/tests/test-fputc
+gl/tests/test-fread
+gl/tests/test-frexp-nolibm
+gl/tests/test-frexpl-nolibm
+gl/tests/test-fseek
 gl/tests/test-fseeko
+gl/tests/test-fseeko3
+gl/tests/test-fseeko4
+gl/tests/test-fseterr
+gl/tests/test-fstat
+gl/tests/test-ftell
+gl/tests/test-ftell3
 gl/tests/test-ftello
 gl/tests/test-ftello3
+gl/tests/test-ftello4
+gl/tests/test-func
+gl/tests/test-fwrite
 gl/tests/test-getaddrinfo
+gl/tests/test-getcwd-lgpl
 gl/tests/test-getdelim
 gl/tests/test-getline
+gl/tests/test-getopt
 gl/tests/test-gettimeofday
+gl/tests/test-hmac-md5
+gl/tests/test-ignore-value
 gl/tests/test-inet_ntop
 gl/tests/test-inet_pton
+gl/tests/test-intprops
+gl/tests/test-intprops 
+gl/tests/test-inttypes
+gl/tests/test-inttypes 
+gl/tests/test-isnand-nolibm
+gl/tests/test-isnanf-nolibm
+gl/tests/test-isnanl-nolibm
 gl/tests/test-lseek
+gl/tests/test-lstat
+gl/tests/test-malloc-gnu
+gl/tests/test-malloca
+gl/tests/test-math
+gl/tests/test-md5
 gl/tests/test-memchr
 gl/tests/test-netdb
 gl/tests/test-netinet_in
+gl/tests/test-open
+gl/tests/test-pathmax
 gl/tests/test-perror
+gl/tests/test-printf-frexp
+gl/tests/test-printf-frexpl
+gl/tests/test-rawmemchr
 gl/tests/test-read-file
 gl/tests/test-select
 gl/tests/test-select-fd
 gl/tests/test-select-stdin
+gl/tests/test-setenv
+gl/tests/test-signbit
+gl/tests/test-sleep
 gl/tests/test-snprintf
 gl/tests/test-sockets
+gl/tests/test-stat
 gl/tests/test-stdbool
 gl/tests/test-stddef
 gl/tests/test-stdint
 gl/tests/test-stdio
 gl/tests/test-stdlib
+gl/tests/test-strchrnul
 gl/tests/test-strerror
 gl/tests/test-string
+gl/tests/test-strings
+gl/tests/test-strnlen
+gl/tests/test-strverscmp
+gl/tests/test-symlink
 gl/tests/test-sys_ioctl
 gl/tests/test-sys_select
 gl/tests/test-sys_socket
 gl/tests/test-sys_stat
 gl/tests/test-sys_time
+gl/tests/test-sys_types
+gl/tests/test-sys_uio
+gl/tests/test-sysexits
 gl/tests/test-time
+gl/tests/test-u64
 gl/tests/test-unistd
+gl/tests/test-unsetenv
 gl/tests/test-vasnprintf
+gl/tests/test-vasprintf
 gl/tests/test-verify
 gl/tests/test-version-etc
-gl/tests/test-wchar
-gl/tests/warn-on-use.h
-gl/tests/test-float
-gl/tests/test-fseek
-gl/tests/test-ftell
-gl/tests/test-ftell3
-gl/tests/test-intprops
-gl/tests/test-inttypes
-gl/tests/test-argp
-gl/tests/test-dirent
-gl/tests/test-dup2
-gl/tests/test-environ
-gl/tests/test-frexp-nolibm
-gl/tests/test-frexpl-nolibm
-gl/tests/test-fseeko3
-gl/tests/test-fseterr
-gl/tests/test-getcwd-lgpl
-gl/tests/test-getopt
-gl/tests/test-ignore-value
-gl/tests/test-isnand-nolibm
-gl/tests/test-isnanf-nolibm
-gl/tests/test-isnanl-nolibm
-gl/tests/test-lstat
-gl/tests/test-malloc-gnu
-gl/tests/test-malloca
-gl/tests/test-math
-gl/tests/test-open
-gl/tests/test-printf-frexp
-gl/tests/test-printf-frexpl
-gl/tests/test-rawmemchr
-gl/tests/test-setenv
-gl/tests/test-signbit
-gl/tests/test-sleep
-gl/tests/test-stat
-gl/tests/test-strchrnul
-gl/tests/test-strnlen
-gl/tests/test-symlink
-gl/tests/test-sysexits
-gl/tests/test-unsetenv
 gl/tests/test-vfprintf-posix
 gl/tests/test-vprintf-posix
+gl/tests/test-vsnprintf
+gl/tests/test-wchar
+gl/tests/warn-on-use.h
+gl/time.h
 gl/time.h
 gl/unistd.h
 gl/warn-on-use.h
 gl/wchar.h
+gnutls-*.tar.*
 guile/Makefile
 guile/Makefile.in
 guile/modules/Makefile
@@ -242,7 +289,11 @@ lib/ABOUT-NLS
 lib/INSTALL
 lib/Makefile
 lib/Makefile.in
+lib/accelerated/libaccelerated.la
+lib/accelerated/x86/libx86.la
 lib/aclocal.m4
+lib/algorithms/libgnutls_alg.la
+lib/auth/libgnutls_auth.la
 lib/autom4te.cache/
 lib/build-aux/config.guess
 lib/build-aux/config.sub
@@ -255,6 +306,7 @@ lib/config.h.in
 lib/config.log
 lib/config.status
 lib/configure
+lib/ext/libgnutls_ext.la
 lib/gcrypt/libcrypto.la
 lib/gnutls-api.texi
 lib/gnutls.pc
@@ -264,40 +316,6 @@ lib/includes/gnutls/gnutls.h
 lib/libgnutls.la
 lib/libgnutlsxx.la
 lib/libtool
-m4/codeset.m4
-m4/gettext.m4
-m4/glibc2.m4
-m4/glibc21.m4
-m4/iconv.m4
-m4/intdiv0.m4
-m4/intl.m4
-m4/intldir.m4
-m4/intlmacosx.m4
-m4/intmax.m4
-m4/inttypes-pri.m4
-m4/inttypes_h.m4
-m4/lcmessage.m4
-m4/lib-ld.m4
-m4/lib-link.m4
-m4/lib-prefix.m4
-m4/libtool.m4
-m4/lock.m4
-m4/longlong.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
-m4/nls.m4
-m4/po.m4
-m4/printf-posix.m4
-m4/progtest.m4
-m4/size_max.m4
-m4/stdint_h.m4
-m4/uintmax_t.m4
-m4/visibility.m4
-m4/wchar_t.m4
-m4/wint_t.m4
-m4/xsize.m4
 lib/minitasn1/Makefile
 lib/minitasn1/Makefile.in
 lib/minitasn1/libminitasn1.la
@@ -309,25 +327,6 @@ lib/openpgp/Makefile
 lib/openpgp/Makefile.in
 lib/openpgp/libgnutls_openpgp.la
 lib/openpgp/pgp-api.texi
-po/*.gmo
-po/*.po
-po/Makefile
-po/Makefile.in
-po/Makefile.in.in
-po/Makevars.template
-po/POTFILES
-po/Rules-quot
-po/boldquot.sed
-po/en@boldquot.header
-po/en@boldquot.insert-header
-po/en@quot.header
-po/en@quot.insert-header
-po/insert-header.sin
-po/gnutls.pot
-po/quot.sed
-po/remove-potcdate.sed
-po/remove-potcdate.sin
-po/stamp-po
 lib/stamp-h1
 lib/x509/Makefile
 lib/x509/Makefile.in
@@ -359,14 +358,69 @@ libextra/libgnutls-openssl.la
 libextra/libtool
 libextra/stamp-h1
 libtool
+m4/codeset.m4
+m4/gettext.m4
+m4/glibc2.m4
+m4/glibc21.m4
+m4/iconv.m4
+m4/intdiv0.m4
+m4/intl.m4
+m4/intldir.m4
+m4/intlmacosx.m4
+m4/intmax.m4
+m4/inttypes-pri.m4
+m4/inttypes_h.m4
+m4/lcmessage.m4
+m4/lib-ld.m4
+m4/lib-link.m4
+m4/lib-prefix.m4
 m4/libtool.m4
+m4/libtool.m4
+m4/lock.m4
+m4/longlong.m4
+m4/ltoptions.m4
 m4/ltoptions.m4
 m4/ltsugar.m4
+m4/ltsugar.m4
+m4/ltversion.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
+m4/lt~obsolete.m4
+m4/nls.m4
+m4/po.m4
+m4/printf-posix.m4
+m4/progtest.m4
+m4/size_max.m4
+m4/stdint_h.m4
+m4/uintmax_t.m4
+m4/visibility.m4
+m4/wchar_t.m4
+m4/wint_t.m4
+m4/xsize.m4
+po/*.gmo
+po/*.po
+po/Makefile
+po/Makefile.in
+po/Makefile.in.in
+po/Makevars.template
+po/POTFILES
+po/Rules-quot
+po/boldquot.sed
+po/en@boldquot.header
+po/en@boldquot.insert-header
+po/en@quot.header
+po/en@quot.insert-header
+po/gnutls.pot
+po/insert-header.sin
+po/quot.sed
+po/remove-potcdate.sed
+po/remove-potcdate.sin
+po/stamp-po
 src/Makefile
 src/Makefile.in
 src/benchmark
+src/benchmark-cipher
+src/benchmark-tls
 src/certtool
 src/cfg/Makefile
 src/cfg/Makefile.in
@@ -374,6 +428,7 @@ src/cfg/platon/Makefile
 src/cfg/platon/Makefile.in
 src/cfg/platon/str/Makefile
 src/cfg/platon/str/Makefile.in
+src/crywrap/crywrap
 src/gnutls-cli
 src/gnutls-cli-debug
 src/gnutls-serv
@@ -390,8 +445,6 @@ src/psktool
 src/srptool
 stamp-h1
 tags
-tests/rng-fork
-tests/mini-eagain-dtls
 tests/*/out
 tests/Makefile
 tests/Makefile.in
@@ -400,6 +453,7 @@ tests/certder
 tests/certificate_set_x509_crl
 tests/certuniqueid
 tests/chainverify
+tests/cipher-test
 tests/crq_apis
 tests/crq_key_id
 tests/crypto_rng
@@ -413,12 +467,15 @@ tests/finished
 tests/gc
 tests/gendh
 tests/hostname-check
+tests/infoaccess
 tests/init_roundtrip
 tests/key-id/Makefile
 tests/key-id/Makefile.in
 tests/libutils.la
 tests/mini
+tests/mini-deflate
 tests/mini-eagain
+tests/mini-eagain-dtls
 tests/mini-x509
 tests/mini-x509-rehandshake
 tests/moredn
@@ -447,6 +504,7 @@ tests/pkcs8-decode/Makefile
 tests/pkcs8-decode/Makefile.in
 tests/pskself
 tests/resume
+tests/rng-fork
 tests/rsa-md5-collision/Makefile
 tests/rsa-md5-collision/Makefile.in
 tests/safe-renegotiation/Makefile
@@ -462,71 +520,15 @@ tests/sha2/Makefile.in
 tests/simple
 tests/suite/eagain-cli
 tests/suite/libecore.la
+tests/suite/x509paths/X509tests
 tests/tlsia
 tests/userid/Makefile
 tests/userid/Makefile.in
 tests/x509_altname
+tests/x509cert
+tests/x509cert-tl
 tests/x509dn
 tests/x509paths/
 tests/x509self
 tests/x509sign-verify
 tests/x509signself
-doc/examples/ex-cert-select-pkcs11
-doc/examples/ex-client-udp
-gl/tests/test-byteswap
-gl/tests/test-fcntl-h
-gl/tests/test-func
-gl/tests/test-hmac-md5
-gl/tests/test-md5
-gl/tests/test-strings
-gl/tests/test-strverscmp
-gl/tests/test-u64
-gl/tests/test-vasprintf
-gl/tests/test-vsnprintf
-gl/tests/test-intprops 
-gl/tests/test-inttypes 
-gl/tests/test-sys_uio
-gl/tests/inttypes.h 
-gl/time.h
-lib/accelerated/libaccelerated.la
-lib/accelerated/x86/libx86.la
-doc/cyclo/cyclo-gnutls.html
-lib/ext/libgnutls_ext.la
-lib/auth/libgnutls_auth.la
-tests/cipher-test
-tests/suite/x509paths/X509tests
-tests/x509cert
-src/benchmark-cipher
-src/benchmark-tls
-doc/gnutls-guile.html
-doc/version-guile.texi
-build-aux/compile
-doc/stamp-1
-lib/algorithms/libgnutls_alg.la
-gl/tests/inttypes.h
-src/crywrap/crywrap
-gl/dirent.h
-gl/getopt.h
-gl/math.h
-doc/doxygen/latex/
-doc/doxygen/html/
-doc/latex/gnutls-enums.tex
-doc/latex/enums
-doc/latex/gnutls.lof
-doc/latex/gnutls.lot
-tests/x509cert-tl
-doc/enums.texi
-doc/enums/
-tests/infoaccess
-gl/tests/test-fdopen
-gl/tests/test-fgetc
-gl/tests/test-fseeko4
-gl/tests/test-fstat
-gl/tests/test-ftello4
-gl/tests/test-pathmax
-gl/tests/test-sys_types
-tests/mini-deflate
-gl/tests/test-close
-gl/tests/test-fputc
-gl/tests/test-fwrite
-gl/tests/test-fread
